# winet-bt

./: CMakeLists.txt  copy-dlls.sh
.github/workflows/: codeql.yml
cmake/dependencies/: gcrypt.cmake
modules/asio-utp/src/libutp/: utp_internal.cpp
src/: client.cpp
src/util/: file_io.h  temp_file.h
test/: CMakeLists.txt  test_bittorrent.cpp
